fix wallet selection on mobile

--- a/style.css
+++ b/style.css
@@ -68,8 +68,13 @@
 	@apply sm:max-w-2xl border-2 border-primary-500;
 }
 .yearn--modalLogin-card {
-	@apply hover:bg-neutral-200;
+	@apply hover:bg-neutral-200 text-xs md:text-sm;
 }
+
+.yearn--modalLogin-card b {
+	@apply text-sm md:text-lg;
+}
+
 .yearn--modalLogin-card {
 	& * {@apply !font-mono;}
 }
